[gd_scene load_steps=22 format=2]

[ext_resource path="res://assets/fonts/minecraftia/Minecraftia-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/new_assets/login.png" type="Texture" id=2]
[ext_resource path="res://script/LogIn.gd" type="Script" id=3]
[ext_resource path="res://assets/new_assets/eye_1.png" type="Texture" id=4]
[ext_resource path="res://assets/new_assets/sign up.png" type="Texture" id=5]
[ext_resource path="res://assets/new_assets/eye_2.png" type="Texture" id=6]
[ext_resource path="res://assets/menu/foyez_text/password.png" type="Texture" id=7]
[ext_resource path="res://assets/ui/buttons_bangla/background2.png" type="Texture" id=8]
[ext_resource path="res://assets/new_assets/back.png" type="Texture" id=9]
[ext_resource path="res://assets/menu/foyez_text/email.png" type="Texture" id=10]
[ext_resource path="res://assets/new_assets/max score frame.png" type="Texture" id=11]
[ext_resource path="res://assets/menu/no_account.png" type="Texture" id=12]
[ext_resource path="res://assets/menu/login_error.png" type="Texture" id=13]
[ext_resource path="res://assets/new_assets/no-internet.png" type="Texture" id=14]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="Login" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = SubResource( 2 )
script = ExtResource( 3 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
texture = ExtResource( 8 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_right = 2.0
mouse_filter = 2
color = Color( 0.14902, 0.227451, 0.498039, 0.576471 )

[node name="BackBtn" type="TextureButton" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 60.0
margin_top = 60.0
margin_right = -820.0
margin_bottom = -1660.0
rect_scale = Vector2( 0.8, 0.8 )
texture_normal = ExtResource( 9 )

[node name="EmailLabel" type="Label" parent="."]
visible = false
margin_left = 258.0
margin_top = 204.0
margin_right = 316.0
margin_bottom = 232.0
text = "email"

[node name="EmailField" type="TextEdit" parent="."]
margin_left = 287.0
margin_top = 372.0
margin_right = 827.0
margin_bottom = 452.0
rect_min_size = Vector2( 540, 80 )
focus_next = NodePath("../PassField")
custom_colors/caret_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 4 )
caret_blink = true

[node name="PassLabel" type="Label" parent="."]
visible = false
margin_left = 260.0
margin_top = 325.0
margin_right = 318.0
margin_bottom = 353.0
text = "password"

[node name="PassField" type="LineEdit" parent="."]
margin_left = 303.0
margin_top = 649.0
margin_right = 843.0
margin_bottom = 729.0
rect_min_size = Vector2( 540, 80 )
focus_next = NodePath("../SubmitBtn")
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/focus = SubResource( 7 )
custom_styles/normal = SubResource( 5 )
secret = true
caret_blink = true

[node name="SubmitBtn" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -195.5
margin_top = -171.5
margin_right = 195.5
margin_bottom = -0.5
rect_pivot_offset = Vector2( 195, 85 )
focus_next = NodePath("../EmailField")
texture_normal = ExtResource( 2 )

[node name="EyeBg" type="ColorRect" parent="."]
margin_left = 849.0
margin_top = 650.0
margin_right = 947.0
margin_bottom = 728.0

[node name="ShowPass" type="TextureButton" parent="."]
margin_left = 834.0
margin_top = 641.0
margin_right = 1014.0
margin_bottom = 781.0
rect_scale = Vector2( 0.7, 0.7 )
toggle_mode = true
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 4 )

[node name="EmailBangla" type="TextureRect" parent="."]
margin_left = 281.0
margin_top = 252.0
margin_right = 528.0
margin_bottom = 345.0
texture = ExtResource( 10 )

[node name="PassBangla" type="TextureRect" parent="."]
margin_left = 301.0
margin_top = 519.0
margin_right = 640.0
margin_bottom = 612.0
texture = ExtResource( 7 )

[node name="ColorRect3" type="ColorRect" parent="."]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -362.0
color = Color( 0.901961, 0.901961, 0.901961, 1 )

[node name="RegisterBtn" type="TextureButton" parent="."]
margin_left = 641.0
margin_top = 81.0001
margin_right = 1091.0
margin_bottom = 252.0
rect_scale = Vector2( 0.8, 0.8 )
texture_normal = ExtResource( 5 )

[node name="NoAccount" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 440.0
margin_top = 1588.0
margin_right = 811.0
margin_bottom = -20.9998
rect_scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 12 )

[node name="fail" type="TextureRect" parent="."]
visible = false
margin_left = 215.0
margin_top = 1181.0
margin_right = 1425.0
margin_bottom = 1436.0
rect_scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 13 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="ErrorMessage" type="Control" parent="."]
unique_name_in_owner = true
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -3.0
margin_top = -315.0
margin_right = -1043.0
margin_bottom = -2195.0

[node name="ColorRect2" type="ColorRect" parent="ErrorMessage"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 131.0
margin_top = 628.0
margin_right = 923.0
margin_bottom = 1198.0

[node name="ErrorFrame" type="TextureRect" parent="ErrorMessage"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 55.0
margin_top = 551.0
margin_right = 995.0
margin_bottom = 1271.0
texture = ExtResource( 11 )

[node name="NoInternet" type="TextureRect" parent="ErrorMessage"]
margin_left = 240.0
margin_top = 851.0
margin_right = 548.0
margin_bottom = 929.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 14 )

[connection signal="pressed" from="BackBtn" to="." method="_on_BackBtn_pressed"]
[connection signal="pressed" from="SubmitBtn" to="." method="_on_SubmitBtn_pressed"]
[connection signal="toggled" from="ShowPass" to="." method="_on_ShowPass_toggled"]
[connection signal="pressed" from="RegisterBtn" to="." method="_on_RegisterBtn_pressed"]
